used whitespace: pre-wrap CSS property/attr to fix DOM formatting of lyrics so they match the JSON data

--- a/index.css
+++ b/index.css
@@ -2,3 +2,7 @@ input {
     display: block;
     margin: 10px;
   }
+
+  .js-search-results {
+    white-space: pre-wrap;
+  }
